CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0RC2     |
+-----------------------+
BUGFIXES
14-03-06    Improved query for listing users with a left join (mstahv)

IMPROVEMENTS
14-03-06    Default theme now config driven

+-----------------------+
| VERSION: 0.6.0RC1     |
+-----------------------+
BUGFIXES
21-02-06    Fixed bug: PageMgr does not handle manager names with multiple uppercase
            letters
17-02-06    Fixed bug where cookie path was being incorrectly set due to SEF
            URIs (Miha Vrhovnik)
14-02-06    Fixed bug where session expiry would not be tested on screens where
            requiresAuth was false (during authenticated session)
14-02-06    SQL errors, if existent, correctly returned in articles
09-02-06    Fixed inability to change an article's category (Jayesh Sheth)
03-02-06    Checks for session timeout improved (Andrey Podshivalov)
31-01-06    Fixed error that occurs when empty array passed to implodeWithKeys()
            (sirphp)

IMPROVEMENTS
08-03-06    Admin GUI complete (Julien Casanova)
04-03-06    Renamed AppController to FrontController
26-02-06    Added printf() method for templates, see
            http://trac.seagullproject.org/wiki/Howto/Templates/WorkingWithTemplates#UsingVariablesinLanguageStrings
            (Andrey Podshivalov)
25-02-06    <link> instead of @import is more reliable for passing GET params
25-02-06    Added 'hits' field to item table to track item hits
25-02-06    Renamed PageMgr to SectionMgr, and all references to 'page' changed
            to section
21-02-06    Improvements to html controls (Olivier Burgard)
21-02-06    Module generator refactored and now auto-registers new modules
            (Gerald Fischer)
20-02-06    Moved all blocks within their respective modules, those without strong
            ties allocated to 'default' module
20-02-06    Moved all default templates within modules
17-02-06    Factored out module builder code into its own manager, ModuleGenerationMgr